Refactored mongo_dao Happy paths work now
