# encryption_key_store/api/upload/router.py
@@ -14,13 +14,18 @@
 # limitations under the License.
 """Contains routes and associated data for the upload path"""
 
-from fastapi import APIRouter, status
+import base64
+import codecs
+
+from fastapi import APIRouter, Depends, status
 
 from encryption_key_store.api.upload import exceptions, models
+from encryption_key_store.config import CONFIG
+from encryption_key_store.core.db_interop.mongo_dao import MongoDbDao
 from encryption_key_store.core.envelope_decryption import (
     extract_envelope_content,
     get_crypt4gh_private_key,
-    insert_file_secret,
+    store_secret,
 )
 
 upload_router = APIRouter()
@@ -37,8 +42,13 @@ ERROR_RESPONSES = {
 }
 
 
+async def dao_injector() -> MongoDbDao:
+    """Define dao as dependency to override during testing"""
+    return MongoDbDao(config=CONFIG)
+
+
 @upload_router.post(
-    "/envelopes",
+    "/secrets",
     summary="Extract file encryption/decryption secret and file content offset from enevelope",
     operation_id="postEncryptionData",
     status_code=status.HTTP_200_OK,
@@ -49,20 +59,30 @@ ERROR_RESPONSES = {
         status.HTTP_403_FORBIDDEN: ERROR_RESPONSES["envelopeDecryptionError"],
     },
 )
-async def post_encryption_secrets(*, envelope_query: models.InboundEnvelopeQuery):
+async def post_encryption_secrets(
+    *,
+    envelope_query: models.InboundEnvelopeQuery,
+    dao: MongoDbDao = Depends(dao_injector)
+):
     """Extract file encryption/decryption secret, create secret ID and extract
     file content offset"""
     user_id = envelope_query.user_id
+    ghga_secret = await get_crypt4gh_private_key(dao=dao)
+    # Mypy false positive
+    file_part = base64.b64decode(codecs.decode(envelope_query.file_part, "hex"))  # type: ignore
     try:
-        ghga_secret = await get_crypt4gh_private_key()
+
         file_secret, offset = await extract_envelope_content(
-            file_part=envelope_query.file_part, ghga_secret=ghga_secret
+            file_part=file_part, ghga_secret=ghga_secret
         )
-        secret_id = await insert_file_secret(file_secret=file_secret)
     except ValueError as error:
         # Everything in crypt4gh is an ValueError... try to distinguish based on message
         if "No supported encryption method" == str(error):
             raise exceptions.HttpEnvelopeDecrpytionError() from error
         raise exceptions.HttpMalformedOrMissingEnvelopeError(user_id=user_id) from error
-
-    return {"secret": file_secret, "secret_id": secret_id, "offset": offset}
+    secret_id = await store_secret(file_secret=file_secret, dao=dao)
+    return {
+        "secret": base64.b64encode(file_secret).hex(),
+        "secret_id": secret_id,
+        "offset": offset,
+    }
