# openapi.yaml
@@ -82,7 +82,6 @@ components:
           title: Offset
           type: integer
         secret:
-          format: binary
           title: Secret
           type: string
         secret_id:
@@ -98,7 +97,6 @@ components:
       description: Request object containing first file part and user ID.
       properties:
         file_part:
-          format: binary
           title: File Part
           type: string
         user_id:
@@ -133,7 +131,7 @@ info:
   version: 0.1.0
 openapi: 3.0.2
 paths:
-  /envelopes:
+  /secrets:
     post:
       description: 'Extract file encryption/decryption secret, create secret ID and
         extract
